pagina de cadastro

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,5 +11,6 @@
 
     <a href="/usuarios/30">ver usuarios 30</a>
     <a href="/usuarios/100">ver usuarios 100</a>
+    <a href="/cadastrar">Cadastrar</a>
 </body>
 </html>
