--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -13,19 +13,21 @@
 
     <main>
 
-        <form action="">
+        <form action="/cadastrar/salvar" method="POST">
             <div>
                 <label for="nome">Nome Completo</label>
-                <input type="text" id="nome" name="name">
+                <input type="text" id="nome" name="nomeCompleto">
             </div>
             <div>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
+                <input type="email" id="email" name="emailTodo">
             </div>
             <div>
                 <label for="senha">Senha:</label>
-                <input type="password" id="senha" name="senha">
+                <input type="password" id="senha" name="senhaTop">
             </div>
+
+            <button type="submit">Enviar</button>
         </form>
     </main>
 </body>
